--- a/ui/static/css/style.css
+++ b/ui/static/css/style.css
@@ -32,73 +32,6 @@ h2 {
     margin-top: 2rem;
 }
 
-.dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
-}
-
-#searchInput {
-    box-sizing: border-box;
-    background-image: url('searchicon.png');
-    background-position: 14px 12px;
-    background-repeat: no-repeat;
-    font-size: 16px;
-    padding: 14px 20px 12px 45px;
-    border: none;
-    border-bottom: 1px solid #ddd;
-}
-
-#searchInput:focus {
-    outline: 3px solid #ddd;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: .5rem;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f6f6f6;
-    min-width: 230px;
-    overflow: auto;
-    border: 1px solid #ddd;
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown a:hover {
-    background-color: #ddd;
-}
-
-.show {
-    display:block
-}
-
-.add-button {
-    margin-left: 1rem;
-}
-
 .class-table {
     background: white;
     border: 1px solid #E4E5E7;
@@ -130,4 +63,32 @@ main {
     margin-bottom: 54px;
     min-height: calc(100vh - 345px);
     overflow: auto;
+}
+
+.search-bar {
+    max-width: 40vw;
+    display: flex;
+    flex-direction: column;
+}
+
+.search-bar label {
+    border: 2px;
+    height: 40px;
+    border-radius: 3px;
+    padding: 5px;
+    font-size: 1rem;
+}
+
+.search-bar input:focus {
+    outline: none;
+    border: 2px solid darkslategray;
+}
+
+.search-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
