--- a/ui/html/partials/nav.html
+++ b/ui/html/partials/nav.html
@@ -4,11 +4,14 @@
         <a href="/">HOME</a>
     </div>
     <div class="user-options">
-        <a href="/user/signup">Signup</a>
-        <a href="/user/login">Login</a>
-        <form action="/user/logout" method="POST">
-            <button>Logout</button>
-        </form>
+        {{if .IsAuthenticated}}
+            <form action="/user/logout" method="POST">
+                <button>Logout</button>
+            </form>
+        {{else}}
+            <a href="/user/signup">Signup</a>
+            <a href="/user/login">Login</a>
+        {{end}}
     </div>
 </nav>
 {{end}}
